Practicas/k8s/Practica-despliegue/config_despliegue/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service 
  namespace: ns1-XXXXX # Cambia esto por tu namespace
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: backend
