Practicas/k8s/Practica-despliegue/config_despliegue/service-ddbb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: ns1-XXXXX # Cambia esto por tu namespace
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql
