Practicas/k8s/Practica-despliegue/config_despliegue/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: ns1-XXXXX # Cambia esto por tu namespace
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 300XX  # Especifica un NodePort fijo. El valor es el numero de tu usuario
  selector:
    app: nginx
