Practicas/k8s/Practica-despliegue/config_despliegue/netpol-4-conn-from-other-ns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx-from-ns2
  namespace: ns1-XXXXX # Cambia esto por tu namespace
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: ns2-XXXXX # Cambia esto por tu namespace
          podSelector:
            matchLabels:
              app: nginx
      ports:
        - protocol: TCP
          port: 5000
